--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2023-04.25 Valera Fessler <vfezler@cloudbees.com>
   * 4.2.0: BEE-32453 - Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
+           BEE-33566 - Fixed import issue with entity names that contain special characters in the overwrite mode
 
 2023-04.18 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.10: BEE-33074 - fixed duplication properties issue with original and encoded names
