--- a/help/help.adoc
+++ b/help/help.adoc
@@ -212,6 +212,7 @@ image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png
 
 * Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
 * Fixed import issue with entity names that contain special characters in the overwrite mode
+* Improved logging in the 'generateDslToDirectory' procedure for properties and property sheets
 
 === EC-DslDeploy 4.1.10
 
