--- a/help/help.adoc
+++ b/help/help.adoc
@@ -380,6 +380,7 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 * Improved logging in the 'generateDslToDirectory' procedure for properties and property sheets
 * Fixed issue with 'timeout' argument in the 'generateDslToDirectory' procedure
 * Fixed import issue for CD entities with names contain punctuated characters
+* Fixed issue with import new properties in the overwrite mode
 
 === EC-DslDeploy 4.1.10
 
