--- a/help/help.adoc
+++ b/help/help.adoc
@@ -208,6 +208,14 @@ image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.1.11
+
+* Fixed regression with multiline property values generation.
+
+=== EC-DslDeploy 4.1.10
+
+* A regression was introduced in version 4.1.10. Do not use this version.
+
 === EC-DslDeploy 4.1.9
 
 * Fixed regression with multiline property values generation
