--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2023-06.06 Alexey Ivanov <aivanov@cloudbees.com>
+  * 4.1.11: Fixed regression with multiline property values generation
+
+2023-04.18 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.10: BEE-33074 - fixed duplication properties issue with original and encoded names
+
 2023-02.07 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.9: BEE-30105 - Fixed regression with multiline property values generation
 
