--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,9 @@
            BEE-32295 - Fixed import issue for CD entities with names contain punctuated characters
            BEE-33683 - Fixed issue with import new properties in the overwrite mode
 
+2023-06.06 Alexey Ivanov <aivanov@cloudbees.com>
+  * 4.1.11: Fixed regression with multiline property values generation
+
 2023-04.18 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.10: BEE-33074 - fixed duplication properties issue with original and encoded names
 
