--- a/help/help.adoc
+++ b/help/help.adoc
@@ -382,9 +382,13 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 * Fixed import issue for CD entities with names contain punctuated characters
 * Fixed issue with import new properties in the overwrite mode
 
+=== EC-DslDeploy 4.1.11
+
+* Fixed regression with multiline property values generation.
+
 === EC-DslDeploy 4.1.10
 
-* Fixed duplication properties issue with original and encoded names
+* A regression was introduced in version 4.1.10. Do not use this version.
 
 === EC-DslDeploy 4.1.9
 
