--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2023-07.04 Valera Fessler <vfezler@cloudbees.com>
+  * 4.2.1: BEE-35400 - Fixed issue with import environment reservations
+
 2023-04.25 Valera Fessler <vfezler@cloudbees.com>
   * 4.2.0: BEE-32453 - Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
            BEE-33566 - Fixed import issue with entity names that contain special characters in the overwrite mode
