--- a/help/help.adoc
+++ b/help/help.adoc
@@ -376,6 +376,7 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 === EC-DslDeploy 4.2.1
 
 * Fixed issue with import environment reservations
+* Supported new option 'suppressEmpty' in the 'generateDsl' plugin procedure
 
 === EC-DslDeploy 4.2.0
 
