--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2023-09.15 Valera Fessler <vfezler@cloudbees.com>
+  * 4.2.2: BEE-39599 - Fixed test "overwrite_installDslFromDirectory.deploy persona, personaPage, personaCategory, user, group" due to changes in BEE-38177
+
 2023-07.04 Valera Fessler <vfezler@cloudbees.com>
   * 4.2.1: BEE-35400 - Fixed issue with import environment reservations
            BEE-33485 - Supported new option 'suppressEmpty' in the 'generateDsl' plugin procedure
