--- a/help/help.adoc
+++ b/help/help.adoc
@@ -366,6 +366,10 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.3.0
+
+* Switched perl from old ec-perl (5.8.9) to new cb-perl (5.32.1)
+
 === EC-DslDeploy 4.2.2
 
 * Fixed test "overwrite_installDslFromDirectory.deploy persona, personaPage, personaCategory, user, group" due to changes in BEE-38177
