--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2023-10.05 Valera Fessler <vfezler@cloudbees.com>
+  * 4.3.0: BEE-38889 - Switched perl from old ec-perl (5.8.9) to new one cb-perl (5.32.1)
+
 2023-09.15 Valera Fessler <vfezler@cloudbees.com>
   * 4.2.2: BEE-39599 - Fixed test "overwrite_installDslFromDirectory.deploy persona, personaPage, personaCategory, user, group" due to changes in BEE-38177
            BEE-41099 - Fixed issue with set job step status in the overwrite mode during DSL evaluation
