--- a/help/help.adoc
+++ b/help/help.adoc
@@ -366,6 +366,10 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.3.1
+
+* Add child process entities support for the microservice container entity
+
 === EC-DslDeploy 4.3.0
 
 * Updated Perl from legacy ec-perl (5.8.9) to cb-perl (5.32.1)
