--- a/help/help.adoc
+++ b/help/help.adoc
@@ -366,6 +366,10 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.3.2
+
+* Process reservations under project
+
 === EC-DslDeploy 4.3.1
 
 * Add child process entities support for the microservice container entity
