--- a/help/help.adoc
+++ b/help/help.adoc
@@ -368,7 +368,7 @@ NOTE: If the commit ID cannot be found or if the procedure or steps cannot find,
 
 === EC-DslDeploy 4.3.2
 
-* Process reservations under project
+* Process reservations under project. (Note that previously exported DSLs will need to be re-exported for import to succeed)
 
 === EC-DslDeploy 4.3.1
 
